--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -29,7 +29,7 @@
 
     button { @include button($bg, $fg); }
 
-    .linked > button { @include linked_button($bg); }
+    .linked > button { @include linked_button($bg, $fg); }
 
     combobox, button {
         padding: $spacing;
