--- a/src/gtk-3.20/scss/apps/_nemo.scss
+++ b/src/gtk-3.20/scss/apps/_nemo.scss
@@ -26,7 +26,7 @@
                 @include button($bg_color, $fg_color);
             }
 
-            .linked > button { @include linked_button($bg_color); }
+            .linked > button { @include linked_button($bg_color, $fg_color); }
 
             separator, separator:disabled {
                 color: shade($bg_color, ($contrast + .1));
@@ -51,7 +51,7 @@
                 margin-left: 15px;
 
                 widget button {
-                    @include linked_button($toolbar_bg_color);
+                    @include linked_button($toolbar_bg_color, $toolbar_fg_color);
                     -NemoPathbarButton-border-radius: $roundness;
                 }
             }
