--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -127,7 +127,7 @@ $button_border_width: 1px;
             }
         }
 
-        &:only-child, &:first-child:only-child {
+        &:only-child {
             border-width: $button_border_width;
             border-style: solid;
         }
